# python-libs

./: .actrc  .codecov.yml  .coveragerc  .env  .gitignore  .hgignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CONTRIBUTING.md  DOCUMENTING.md  LICENSE  MAINTAINERS  Makefile  README  README-Unicode.md  README.md  __init__.py  accessor.py  biosdevname.py  bootloader.py  cmd.py  cpiofile.py  cspell.json  dom0.py  dom0_memory.py  environ.py  gen_gh_pylint_report.py  ifrename.py  logger.py  logging.py  mac.py  mount.py  pci.py  pylint.rc  pylint_runner.py  pylintrc  pyproject.toml  pyre_runner.py  (+18 more)
.github/: act-serial.yaml
.github/workflows/: docs-deploy-to-gh-pages.yml  main.yml  pytype.cfg  reviewdog-review.yml
cpython-tests/: test_cpiofile.py  testcpio.cpio
docs/: requirements.txt
docs/source/: accessor.rst  bootloader.rst  cmd.rst  compat.rst  conf.py  cpiofile.rst  dmv.rst  dom0.rst  environ.rst  include-toplevel-CONTRIBUTING.md  include-toplevel-DOCUMENTING.md  include-toplevel-README-Unicode.md  include-toplevel-README.md  index.rst  logger.rst  modules.txt  mount.rst  pci.rst  repository.rst  version.rst  xmlunwrap.rst
docs/source/net/: biosdevname.rst  ip.rst  mac.rst
docs/source/net/ifrename/: ifrename-dynamic.rst  ifrename-logic.rst  ifrename-macpci.rst  ifrename-static.rst  ifrename-util.rst
net/: __init__.py  biosdevname.py  ip.py  mac.py
net/ifrename/: __init__.py  dynamic.py  logic.py  macpci.py  static.py  util.py
stubs/: branding.pyi  pytest.pyi  pytest_forked.pyi  pytest_httpserver.pyi
stubs/parameterized/: parameterized.pyi  test.pyi
stubs/pyfakefs/: fake_filesystem.pyi  fake_filesystem_unittest.pyi
stubs/pyftpdlib/: _compat.pyi  ioloop.pyi  log.pyi  servers.pyi
stubs/pytest_localftpserver/: helper_functions.pyi  plugin.pyi  servers.pyi
stubs/pytest_subprocess/: fake_process.pyi
stubs/werkzeug/: wrappers.pyi
stubs/xcp/: branding.py
tests/: .coveragerc  __init__.py  branding.py  conftest.py  httpserver_testcase.py  run-all-tests.sh  run-test.sh  run-tests.sh  test_accessor.py  test_biosdevname.py  test_biosdevname_ns.py  test_bootloader.py  test_cmd.py  test_cpio.py  test_cpiofile.py  test_dmv.py  test_dom0.py  test_dom0_memory.py  test_environ.py  test_ftpaccessor.py  test_httpaccessor.py  test_httprepository.py  test_ifrename.py  test_ifrename_dynamic.py  test_ifrename_logic.py  test_ifrename_static.py  test_ip.py  test_logger.py  test_mac.py  test_mountingaccessor.py  test_pci.py  test_repository.py  test_sbdfi_to_nic.py  test_version.py  test_xmlunwrap.py  xcptestlib.py  xcptestlib_unshare.py
tests/data/: all_ethN.biosdevname  grub-linux-no-kernel.cfg  grub-linux.cfg  grub-no-hypervisor.cfg  grub-no-multiboot.cfg  grub-xen-boot.cfg  grub.cfg  lspci  lspci-mn  pci.ids  physical.biosdevname
tests/data/inventory/etc/: xensource-inventory
tests/data/repo/: .treeinfo  XS-PACKAGES  XS-REPOSITORY
tests/data/repo/repodata/: repomd.xml
xcp/: __init__.py  accessor.py  bootloader.py  branding.py  cmd.py  compat.py  cpiofile.py  dmv.py  dom0.py  environ.py  logger.py  mount.py  pci.py  repository.py  utf8mode.py  version.py  xmlunwrap.py
xcp/net/: biosdevname.py  ip.py  mac.py
xcp/net/ifrename/: __init__.py  dynamic.py  logic.py  macpci.py  static.py  util.py
